--- a/css-exercises/flex/06-flex-layout/style.css
+++ b/css-exercises/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -24,4 +26,60 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+ul{
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+li{
+    margin-left: 10px;
+}
+a {
+    text-decoration: none; 
+    background-color: none; 
+    color: #555555;
+    font-weight: bold;
+}
+.header{
+    display: flex;
+    justify-self: flex-start;
+    margin-bottom: auto;
+}
+.header .left-links{
+    justify-self: flex-start;
+    margin-right:auto;
+    justify-content: space-between;
+}
+.header .right-links{
+    justify-self: flex-end;
+    margin-left:auto;
+    margin-right: 50px;
+}
+.content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    justify-self: center;
+}
+.footer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: lightgray;
+    justify-self: flex-end;
+    margin-top: auto;
+    
+}
+.footer .left-links{
+    justify-self: flex-start;
+    margin-right:auto;
+}
+.footer .right-links{
+    justify-self: flex-end;
+    margin-left:auto;
+    margin-right: 50px;
 }
