--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -112,3 +112,25 @@ a{
     margin-top: 20px;
     margin-bottom: 10px;
 }
+.content-3{
+    background-color: #E5E7EB;
+    height: 300px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.content-3 .quote{
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+}
+#p-quote {
+    font-style: italic;
+}
+#p-author{
+    font-weight: bold;
+    align-self: flex-end;
+    margin-top: 0;
+    font-size: 14px;
+}
