--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -134,3 +134,49 @@ a{
     margin-top: 0;
     font-size: 14px;
 }
+.content-4{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    padding:40px;
+}
+
+#sign-up-card{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #3882F6;
+    border-radius: 10px;
+    height: 100px;
+    width: 600px;
+    padding: 20px;
+    padding-left: 80px;
+    padding-right: 80px;
+}
+.content-4-sign-up-btn button{
+    background-color: #3882F6;
+    color:#F9FAF8;
+    border-radius: 10px;
+    width: 120px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    font-weight: bold;
+    border-color: white;
+}
+.content-4-txt{
+    padding: 10px;
+}
+#p-action-call{
+    margin-bottom: 1px;
+    font-weight: bold;
+    color:#F9FAF8;
+}
+#p-sign-up{
+    font-weight: bold;
+    color:#F9FAF8;  
+    margin-top: 5px;
+}
