--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -1,5 +1,7 @@
 body{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 ul{
     display: flex;
@@ -179,4 +181,12 @@ a{
     font-weight: bold;
     color:#F9FAF8;  
     margin-top: 5px;
+}
+.footer{
+    height: 100px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    color:#F9FAF8;
 }
